--- a/src/pos/layerd/view/ItemPanel.form
+++ b/src/pos/layerd/view/ItemPanel.form
@@ -295,12 +295,12 @@
             <Component class="javax.swing.JLabel" name="jLabel1">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/pos/layerd/view/online-shopping-e-commerce-concept-wooden-block-icon-cart-standing-computer-keyboard-viewed-44905065.jpg"/>
+                  <Image iconType="2" name="C:\Users\Hiran\Desktop\ijse\online-shopping-e-commerce-concept-wooden-block-icon-cart-standing-computer-keyboard-viewed-44905065.jpg"/>
                 </Property>
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="0" y="0" width="710" height="660"/>
+                  <AbsoluteConstraints x="0" y="0" width="710" height="600"/>
                 </Constraint>
               </Constraints>
             </Component>
